@@ -928,7 +928,7 @@ format_float_internal(PyObject *value,
     Py_ssize_t n_total;
     int has_decimal;
     double val;
-    Py_ssize_t precision = format->precision;
+    Py_ssize_t precision;
     Py_ssize_t default_precision = 6;
     STRINGLIB_CHAR type = format->type;
     int add_pct = 0;
@@ -946,6 +946,12 @@ format_float_internal(PyObject *value,
     /* Locale settings, either from the actual locale or
        from a hard-code pseudo-locale */
     LocaleInfo locale;
+
+    if (format->precision > INT_MAX) {
+        PyErr_SetString(PyExc_ValueError, "precision too big");
+        goto done;
+    }
+    precision = (int)format->precision;
 
     /* Alternate is not allowed on floats. */
     if (format->alternate) {
@@ -1078,7 +1084,7 @@ format_complex_internal(PyObject *value,
     Py_ssize_t n_im_total;
     int re_has_decimal;
     int im_has_decimal;
-    Py_ssize_t precision = format->precision;
+    Py_ssize_t precision;
     Py_ssize_t default_precision = 6;
     STRINGLIB_CHAR type = format->type;
     STRINGLIB_CHAR *p_re;
@@ -1106,6 +1112,12 @@ format_complex_internal(PyObject *value,
     /* Locale settings, either from the actual locale or
        from a hard-code pseudo-locale */
     LocaleInfo locale;
+
+    if (format->precision > INT_MAX) {
+        PyErr_SetString(PyExc_ValueError, "precision too big");
+        goto done;
+    }
+    precision = (int)format->precision;
 
     /* Alternate is not allowed on complex. */
     if (format->alternate) {
